--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -63,13 +63,17 @@
 }
 
 .hero-container {
-    background-image: url('../assets/fruits.jpeg');
+    background-image: url('../assets/sign2.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     height: 200px;
     padding: 50px 20px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 
 #hero-text-overlay {
     height: auto;
@@ -128,3 +132,49 @@
     height: 100%;
     object-fit: cover;
 }
+
+.menu-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 20px;
+    background-color: white;
+}
+
+.menu-container img {
+    width: 50%;
+    height: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.qna-container {
+    background-color: #f9f9f9;
+    padding: 50px 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.qna-container h1 {
+    margin: 0;
+    font-size: 28px;
+    color: #333;
+}
+
+.qna-container p {
+    margin: 0;
+    font-size: 20px;
+    color: #555;
+}
+
+.image-grid-bottom-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 20px 0px;
+    background-color: #e0e0e0;
+    max-width: 100%;
+    max-height: auto;
+}
+
