--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -293,3 +293,66 @@
     padding: 50px;
     font-size: 14px;
 }
+
+
+.about-title {
+    height: 20vh;
+    width: 100%;
+    border: 2px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url('../assets/city.jpg');
+    background-size: cover;
+}
+
+.about-title h1 {
+    font-size: 36px;
+}
+
+.about-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 20px;
+    gap: 20px;
+    margin: 100px 20px;
+    background-color: rgb(242, 242, 242);
+    color: black;
+}
+
+#about-logo {
+    width: 300px;
+    height: auto;
+    border-radius: 100%;
+    border: 2px solid rgb(30, 140, 0);
+}
+
+.about-container p {
+    font-size: 20px;
+    max-width: 800px;
+    text-align: center;
+    line-height: 1.6;
+}
+
+#about-video {
+    width: 50%;
+    height: auto;
+    margin-top: 20px;
+    border: 2px solid rgb(30, 140, 0);
+    border-radius: 10px;
+}
+
+
+.about-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 20px 0px;
+    max-width: 100%;
+    max-height: auto;
+    gap: 0px;
+    justify-items: center;
+    align-items: center;
+}
+
